--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/react-fontawesome": "^0.1.8",
+        "@types/react": "18.0.12",
+        "@types/react-dom": "18.0.5",
+        "@types/react-redux": "7.1.24",
+        "@types/node": "17.0.42",
         "animate.css": "^3.7.2",
         "bootstrap": "^4.4.1",
         "gh-pages": "^2.0.1",
@@ -57,9 +61,9 @@
         "@types/jquery": "^3.3.31",
         "@types/node": "^13.5.2",
         "@types/prop-types": "^15.7.3",
-        "@types/react": "^16.9.19",
-        "@types/react-dom": "^16.9.5",
-        "@types/react-redux": "^7.1.7",
+        "@types/react": "^16.14.26",
+        "@types/react-dom": "^16.9.16",
+        "@types/react-redux": "^7.1.24",
         "@typescript-eslint/eslint-plugin": "^2.18.0",
         "@typescript-eslint/parser": "^2.18.0",
         "eslint": "^6.8.0",
@@ -68,5 +72,9 @@
         "prettier": "^1.19.1",
         "source-map-loader": "^0.2.4",
         "ts-loader": "^6.2.1"
+    },
+    "resolutions": {
+        "@types/react": "^16.14.26",
+        "@types/react-dom": "^16.9.16"
     }
 }
