--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
     "name": "react-portfolio",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://doublejosh.github.com/react-portfolio",
+    "homepage": "https://alexg1299.github.io/alexg1299/portfolio-react",
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^1.2.26",
         "@fortawesome/free-brands-svg-icons": "^5.12.0",
         "@fortawesome/free-solid-svg-icons": "^5.12.0",
         "@fortawesome/react-fontawesome": "^0.1.8",
+        "@types/node": "17.0.42",
         "@types/react": "18.0.12",
         "@types/react-dom": "18.0.5",
         "@types/react-redux": "7.1.24",
-        "@types/node": "17.0.42",
         "animate.css": "^3.7.2",
         "bootstrap": "^4.4.1",
-        "gh-pages": "^2.0.1",
+        "gh-pages": "^2.2.0",
         "jquery": "^3.4.1",
         "jquery.easing": "^1.4.1",
         "node-sass": "^4.12.0",
